# system-setup

./: .gitignore  MIGRATION_GUIDE.md  README.md  autumn.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  system_setup.yaml.example
system_setup/: __init__.py  cli.py  config.py  defaults.yaml  logger.py  state.py
system_setup/platform/: __init__.py  base.py  detector.py  linux.py  macos.py  windows.py
system_setup/tasks/: __init__.py  base.py  chezmoi.py  dotfiles.py  fish.py  hyprland.py  modern_tools.py  packages.py  registry.py  settings.py  shell.py
system_setup/utils/: __init__.py  checksum.py  command.py  download.py
tests/: __init__.py  conftest.py  test_command_runner.py  test_config.py  test_new_modules.py  test_platform.py  test_state.py  test_tasks.py  test_utils.py
